--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Woo!</h1>
+<h1>Woo! Testing changes here</h1>
+<h2>And here</h2>
 </body>
 </html>
