Adding more structure

--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,7 @@
 <body>
 <h1>Woo! Testing changes here</h1>
 <h2>And here</h2>
+<h3>Now we're getting into a page structure</h3>
+<p>It's starting to look great I think</p>
 </body>
 </html>
