--- a/site/index.html
+++ b/site/index.html
@@ -8,5 +8,7 @@
 <h2>And here</h2>
 <h3>Now we're getting into a page structure</h3>
 <p>It's starting to look great I think</p>
+<p>Now this is a story all about how</p>
+<h4>My life got turned into a git</h4>
 </body>
 </html>
